<resources>
    <string name="app_name">MangaComicList</string>
    <string name="manga_and_comics_list">Manga and Comics List</string>
    <string name="your_list">Your list</string>
    <string name="add">Add</string>
    <string name="logged_user">Logged as %s</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_login">Sign in</string>

    <string name="login_label">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="create_account">Register</string>
    <string name="password_re">Re-enter password</string>
    <string name="name">Name</string>
</resources>
